# Exponential-Long-Short-Term-Memory

./: .gitignore  README.md  requirements.txt
backend/: .gitignore  Pipfile  main.py  pyproject.toml  test.py
backend/database/: database.py  thesis-db-23474-firebase-adminsdk-fbsvc-d1ecfa0eb4.json
backend/datasets/: AAPL_data.csv  TSLA_data.csv  ^FCHI_data.csv  air_liquide.csv  sample-data.csv
backend/datasets/cache/: yahoo_90ccb6686e0ae77e42cf532917701946.csv
backend/docs/: training.md
backend/models/: model_seq10_ELU.pt  model_seq10_Tanh.pt  model_seq15_ELU.pt  model_seq15_Tanh.pt  model_seq1_ELU.pt  model_seq1_Tanh.pt  model_seq30_ELU.pt  model_seq30_Tanh.pt  model_seq31_ELU.pt  model_seq31_Tanh.pt  model_seq39_ELU.pt  model_seq39_Tanh.pt  model_seq50_ELU.pt  model_seq50_Tanh.pt  model_sequence10_ELU.pt  model_sequence10_Tanh.pt  model_sequence15_ELU.pt  model_sequence15_Tanh.pt  model_sequence1_ELU.pt  model_sequence1_Tanh.pt  model_sequence25_ELU.pt  model_sequence25_Tanh.pt  model_sequence2_ELU.pt  model_sequence2_Tanh.pt  model_sequence30_ELU.pt  model_sequence30_Tanh.pt  model_sequence31_ELU.pt  model_sequence31_Tanh.pt  model_sequence35_ELU.pt  model_sequence35_Tanh.pt  model_sequence3_ELU.pt  model_sequence3_Tanh.pt  model_sequence40_ELU.pt  model_sequence40_Tanh.pt  model_sequence50_ELU.pt  model_sequence50_Tanh.pt  model_sequence5_ELU.pt  model_sequence5_Tanh.pt
backend/models/Test 1/: config.json  model_seq10_ELU.pt  model_seq10_Tanh.pt
backend/saved_models/: comparative_results.json  model_config.json  model_elu.pth  model_tanh.pth
(+475 files in other folders)
